Update GET laptops
