# src/swagger/swagger.yml
@@ -296,6 +296,14 @@ paths:
       
 ## laptopRoutes.js
   /laptops:
+    parameters:
+      - in: query
+        name: stateId
+        description: Filtrar los portátiles por estado. (1 para portátiles disponibles)
+        required: false
+        schema:
+          type: integer
+          example: 1
     get:
       tags:
         - admin
